# FFCmd

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jsx/ffcmd/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jsx/ffcmd/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jsx/ffcmd/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libffmpegcmd/: build.gradle
libffmpegcmd/src/androidTest/java/com/jsx/libffmpegcmd/: ExampleInstrumentedTest.java
libffmpegcmd/src/main/: AndroidManifest.xml
libffmpegcmd/src/main/cpp/: CMakeLists.txt
libffmpegcmd/src/main/cpp/ffmpeg/: ffmpeg.c  ffmpeg.h  ffmpeg_opt.c  jx_ffmpeg_cmd_run.c
libffmpegcmd/src/main/java/com/jsx/libffmpegcmd/: FFmpegCmd.java
libffmpegcmd/src/test/java/com/jsx/libffmpegcmd/: ExampleUnitTest.java
